# image_processor

./: CMakeLists.txt  image_processor  image_processor.cpp  parser.cpp  parser.h  readme.md
filters/: filter.h
filters/blur/: blur.cpp  blur.h
filters/crop/: crop.cpp  crop.h
filters/edge/: edge.cpp  edge.h
filters/formula_filter/: formula_filter.cpp  formula_filter.h
filters/grayscale/: grayscale.cpp  grayscale.h
filters/matrix_filter/: matrix_filter.cpp  matrix_filter.h
filters/negative/: negative.cpp  negative.h
filters/pixelate/: pixelate.cpp  pixelate.h
filters/sharpening/: sharpening.cpp  sharpening.h
image/: image.cpp  image.h  pixel.cpp  pixel.h
tests/: test_filters.cpp  test_image.cpp  test_parser.cpp
